k8s/rabbitmq-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbitmq-ingress
  annotations:
    external-dns.alpha.kubernetes.io/set-identifier: rabbitmq-ingress-${NAMESPACE}-green
    external-dns.alpha.kubernetes.io/aws-weight: "100"
spec:
  ingressClassName: default # modsec
  tls:
    - hosts:
        - messaging.${NAMESPACE}.live.cloud-platform.service.justice.gov.uk
  rules:
    - host: messaging.${NAMESPACE}.live.cloud-platform.service.justice.gov.uk
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: rabbit-service # this should match the metadata.name in service.yml
                port:
                  number: 15672
